<resources>
    <string name="app_name">MaKoreAndroid</string>
    <string name="new_message_here">New message here...</string>
    <string name="app_name_clean">MaKore</string>
    <string name="login_userName">UserName</string>
    <string name="login_password">Password</string>
    <string name="login_btnLogin">Login</string>
    <string name="fake_chat_string">hey</string>
    <string name="register_nickname">NickName</string>
    <string name="register_userName">UserName</string>
    <string name="register_password">Password</string>
    <string name="register_VPassword">Password Again</string>
    <string name="register_btnRegister">Register</string>
    <string name="login_login">Login</string>
    <string name="register_register">Register</string>
    <string name="add">add</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_nickname">Enter NickName</string>
    <string name="enter_username">Enter UserName</string>
    <string name="enter_server_ip">Enter Server IP</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="login_invalid_details">Invalid details. Not registerd? Sign up now!</string>
    <string name="login_required_username">UserName is required</string>
    <string name="BaseUrl">http://10.0.2.2:5018/api/</string>
    <string name="register_have_username">UserName is required!</string>
    <string name="register_have_pass">Password is required!</string>
    <string name="register_pass_not_equal">Passwords are not the same</string>
    <string name="register_8digits_pass">Password must contain at least eight characters, including digits and letters</string>
    <string name="register_username_have_chars">Username must contain at least one character</string>
    <string name="register_username_taken">Username already taken</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_server">Server</string>
    <string name="settings_nickname">Nickname</string>
    <string name="already_registered_click_here_to_login">Not Registered ? Click To Register !</string>
    <string name="not_registered_click_to_register">Already registered ? Click here to login !</string>
    <string name="change_the_address_of_your_default_server">Change the address of your default server</string>
    <string name="enter_new_server">Enter new server</string>
    <string name="settings_log_out">Log Out</string>
</resources>